feat: add artist API endpoint
